# hap_installer

./: .gitignore  .gitmodules  AppIcon.icns  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
.github/workflows/: macos.yml
quazip/mac/libs/: libquazip.1.dylib
